--- a/spring-new-user-form/src/main/resources/templates/useradd.html
+++ b/spring-new-user-form/src/main/resources/templates/useradd.html
@@ -7,17 +7,20 @@
 <body>
 <div class="container">
     <h1>ユーザー新規登録</h1>
-    <form th:action="@{/useradd/zipcode}" th:method="post">
-
-	<div class="form-group">
-		<label>郵便番号：<span class="text-danger">※</span></label>
-		<input type="text" name="zipcode" class="form-control">
+    <div th:if="${validationError}" th:each="error : ${validationError}">
+		<label class="text-danger" th:text="${error}"></label>
 	</div>
+	    <form action="?" th:method="post">
 
-    <br />
-    <div class="text-center">
-		<input type="submit" value="　登録　" class="btn btn-primary">
-	</div>
+			<div class="form-group">
+				<label>郵便番号：<span class="text-danger">※</span></label>
+				<input type="text" name="zipcode" maxlength="7" class="form-control">
+			</div>
+		    <br/>
+		    <div class="text-center">
+				<input type="submit" value="　登録　" class="btn btn-primary" formaction="/useradd/zipcode">
+			</div>
+
 	</form>
 </div>
 </body>
