--- a/spring-new-user-form/src/main/resources/templates/useradd.html
+++ b/spring-new-user-form/src/main/resources/templates/useradd.html
@@ -12,10 +12,70 @@
 	</div>
 	    <form action="?" th:method="post">
 
-			<div class="form-group">
-				<label>郵便番号：<span class="text-danger">※</span></label>
-				<input type="text" name="zipcode" maxlength="7" class="form-control">
-			</div>
+			<label>姓：<span class="text-danger">※</span></label>
+			<input type="text" name="firstName" maxlength="10" class="form-control">
+
+			<label>名：<span class="text-danger">※</span></label>
+			<input type="text" name="lastName" maxlength="10" class="form-control">
+
+			<label>姓 (セイ)：<span class="text-danger">※</span></label>
+			<input type="text" name="firstKanaName" maxlength="20" class="form-control">
+
+			<label>名 (メイ)：<span class="text-danger">※</span></label>
+			<input type="text" name="lastKanaName" maxlength="20" class="form-control">
+
+			<!-- 性別 -->
+			<label>男性：<span class="text-danger">※</span></label>
+			<input type="radio" name="mele" class="form-control">
+
+			<label>女性：<span class="text-danger">※</span></label>
+			<input type="radio" name="female" class="form-control">
+
+			<label>未選択：<span class="text-danger">※</span></label>
+			<input type="radio" name="unselect" maxlength="7" class="form-control">
+
+			<!--  生年月日 -->
+			<label>年：<span class="text-danger">※</span></label>
+			<input type="text" name="year" maxlength="7" class="form-control">
+
+			<label>月：<span class="text-danger">※</span></label>
+			<input type="text" name="month" maxlength="7" class="form-control">
+
+			<label>日：<span class="text-danger">※</span></label>
+			<input type="text" name="day" maxlength="7" class="form-control">
+
+			<label>メールアドレス：<span class="text-danger">※</span></label>
+			<input type="text" name="email" maxlength="7" class="form-control">
+
+			<label>電話番号：<span class="text-danger">※</span></label>
+			<input type="text" name="phone" maxlength="7" class="form-control">
+
+			<label>郵便番号：<span class="text-danger">※</span></label>
+			<input type="text" name="zipcode" maxlength="7" class="form-control">
+
+			<label>都道府県：<span class="text-danger">※</span></label>
+			<input type="text" name="prefectures" maxlength="7" class="form-control">
+
+			<label>市区町村：<span class="text-danger">※</span></label>
+			<input type="text" name="city" maxlength="7" class="form-control">
+
+			<label>地域名：<span class="text-danger">※</span></label>
+			<input type="text" name="region" maxlength="7" class="form-control">
+
+			<label>番地：<span class="text-danger">※</span></label>
+			<input type="text" name="address1" maxlength="7" class="form-control">
+
+			<label>建物名・部屋番号：<span class="text-danger">※</span></label>
+			<input type="text" name="address2" maxlength="7" class="form-control">
+
+			<label>メールマガジン：<span class="text-danger">※</span></label>
+			<input type="checkbox" name="magazin" maxlength="7" class="form-control">
+
+			<label>利用規約：<span class="text-danger">※</span></label>
+			<input type="checkbox" name="agreeTeam" maxlength="7" class="form-control">
+
+
+
 		    <br/>
 		    <div class="text-center">
 				<input type="submit" value="　登録　" class="btn btn-primary" formaction="/useradd/zipcode">
