リクエスト

--- a/spring-new-user-form/src/main/resources/templates/useradd.html
+++ b/spring-new-user-form/src/main/resources/templates/useradd.html
@@ -80,6 +80,21 @@ h1 {
 
 			<br/>
 
+			<label>ユーザ名：<span class="text-danger">※</span></label>
+			<input type="text" name="username" maxlength="20" class="form-control">
+
+			<br/>
+
+			<label>パスワード：<span class="text-danger">※</span></label>
+			<input type="password" name="password" maxlength="20" class="form-control">
+
+			<br/>
+
+			<label>パスワード：<span class="text-danger">※</span></label>
+			<input type="password" name="password-confirm" maxlength="20" class="form-control">
+
+			<br/>
+
 			<label>電話番号：<span class="text-danger">※</span></label>
 			<input type="text" name="phone" maxlength="14" class="form-control">
 
