--- a/spring-new-user-form/src/main/resources/templates/useradd.html
+++ b/spring-new-user-form/src/main/resources/templates/useradd.html
@@ -33,11 +33,11 @@ h1 {
     <div th:if="${validationError}" th:each="error : ${validationError}">
 		<label class="text-danger" th:text="${error}"></label>
 	</div>
-	    <form action="?" th:method="post">
+		<form action="?" th:method="post">
 
 			<label>姓：<span class="text-danger" >※</span></label>
-			<input type="text" th:field="firstName" maxlength="10" class="form-control"
-			th:classappend="${#fields.hasErrors('firstName')}?'is-invalid'">
+			<input type="text" name="firstName" maxlength="10" class="form-control"
+			th:classappend="${#fields.hasErrors('firstName')} ? is-invalid"/>
 
 			<label>名：<span class="text-danger">※</span></label>
 			<input type="text" name="lastName" maxlength="10" class="form-control">
@@ -144,8 +144,13 @@ h1 {
 
 			<br/>
 
-			<label>メールマガジンを受け取る</label>
-			<input type="checkbox" name="magazin" class="form-control">
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="magazin">
+				<label class="form-check-label" for="flexCheckDefault">
+					メールマガジンを受け取る
+				</label>
+			</div>
+
 
 			<br/>
 
@@ -275,16 +280,24 @@ h1 {
 <div id="end"></div>
 </div>
 
-			<label>利用規約：<span class="text-danger">※</span></label>
-			<input type="checkbox" name="agreeTeam" class="form-control">
+		<div class="form-check">
+			<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="agreeTeam">
+			<label class="form-check-label" for="flexCheckDefault">
+				利用規約
+			</label>
+		</div>
 
-		    <br/>
+	    <br/>
 
-		    <div class="text-center">
-				<input type="submit" value="　登録　" class="btn btn-primary" formaction="/useradd/userlist">
-			</div>
+	    <div class="text-center">
+			<input type="submit" value="　登録　" class="btn btn-primary" formaction="/useradd/userlist">
+		</div>
 
 	</form>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
