--- a/spring-new-user-form/src/main/resources/templates/useradd.html
+++ b/spring-new-user-form/src/main/resources/templates/useradd.html
@@ -36,8 +36,7 @@ h1 {
 		<form action="?" th:method="post">
 
 			<label>姓：<span class="text-danger" >※</span></label>
-			<input type="text" name="firstName" maxlength="10" class="form-control"
-			th:classappend="${#fields.hasErrors('firstName')} ? is-invalid"/>
+			<input type="text" name="firstName" maxlength="10" class="form-control">
 
 			<label>名：<span class="text-danger">※</span></label>
 			<input type="text" name="lastName" maxlength="10" class="form-control">
@@ -52,6 +51,7 @@ h1 {
 			<br/>
 
 			<!-- 性別 -->
+			<!--
 			<div>
 				<label>性別：<span class="text-danger">※</span></label>
 				<br/>
@@ -61,6 +61,19 @@ h1 {
 				<input type="radio" name="gender" id="female" class="form-control">
 				<label>未選択</label>
 				<input type="radio" name="gender"  id="unselect" class="form-control" checked>
+			</div>
+			-->
+			
+			
+			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<label class="btn btn-outline-primary" for="btnradio1">男性</label>
+				
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+				<label class="btn btn-outline-primary" for="btnradio2">女性</label>
+				
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-primary" for="btnradio3">未選択</label>
 			</div>
 
 			<br/>
@@ -146,7 +159,7 @@ h1 {
 
 			<div class="form-check">
 				<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="magazin">
-				<label class="form-check-label" for="flexCheckDefault">
+				<label class="form-check-label">
 					メールマガジンを受け取る
 				</label>
 			</div>
