--- a/spring-new-user-form/src/main/resources/templates/useradd.html
+++ b/spring-new-user-form/src/main/resources/templates/useradd.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <script src="../static/js/required.js"></script>
-    <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
-    <title>ユーザー新規登録</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <script src="../static/js/required.js"></script>
+  <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
+  <title>ユーザー新規登録</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <style>
@@ -29,145 +29,146 @@ h1 {
 
 <body>
 <div class="container">
-    <h1>ユーザー新規登録</h1>
-    <div th:if="${validationError}" th:each="error : ${validationError}">
-		<label class="text-danger" th:text="${error}"></label>
-	</div>
-		<form action="?" th:method="post">
+  <h1>ユーザー新規登録</h1>
+  <div th:if="${validationError}" th:each="error : ${validationError}">
+  <label class="text-danger" th:text="${error}"></label>
+</div>
 
-			<label>姓：<span class="text-danger" >※</span></label>
-			<input type="text" name="firstName" maxlength="10" class="form-control">
+<form action="?" th:method="post">
 
-			<label>名：<span class="text-danger">※</span></label>
-			<input type="text" name="lastName" maxlength="10" class="form-control">
+<label>姓：<span class="text-danger" >※</span></label>
+<input type="text" name="firstName" maxlength="10" class="form-control">
+<label>名：<span class="text-danger">※</span></label>
+<input type="text" name="lastName" maxlength="10" class="form-control">
 
-			<br/>
+<br/>
 
-			<label>姓 (セイ)：<span class="text-danger">※</span></label>
-			<input type="text" name="firstKanaName" maxlength="20" class="form-control">
-			<label>名 (メイ)：<span class="text-danger">※</span></label>
-			<input type="text" name="lastKanaName" maxlength="20" class="form-control">
+<label>姓 (セイ)：<span class="text-danger">※</span></label>
+<input type="text" name="firstKanaName" maxlength="20" class="form-control">
+<label>名 (メイ)：<span class="text-danger">※</span></label>
+<input type="text" name="lastKanaName" maxlength="20" class="form-control">
 
-			<br/>
+  <br/>
 
-			<!-- 性別 -->
-			<!--
-			<div>
-				<label>性別：<span class="text-danger">※</span></label>
-				<br/>
-				<label>男性</label>
-				<input type="radio" name="gender" id="male" class="form-control">
-				<label>女性</label>
-				<input type="radio" name="gender" id="female" class="form-control">
-				<label>未選択</label>
-				<input type="radio" name="gender"  id="unselect" class="form-control" checked>
-			</div>
-			-->
-			
-			
-			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-				<label class="btn btn-outline-primary" for="btnradio1">男性</label>
-				
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-				<label class="btn btn-outline-primary" for="btnradio2">女性</label>
-				
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-				<label class="btn btn-outline-primary" for="btnradio3">未選択</label>
-			</div>
-
-			<br/>
-
-			<!--  生年月日 -->
-			<div>
-				<label>生年月日：<span class="text-danger">※</span></label>
-				<label>年</label>
-				<input type="text" name="year" maxlength="4" class="form-control">
-				<label>月</label>
-				<input type="text" name="month" maxlength="2" class="form-control">
-				<label>日</label>
-				<input type="text" name="day" maxlength="2" class="form-control">
-			</div>
-
-			<br/>
-
-			<label>メールアドレス：<span class="text-danger">※</span></label>
-			<input type="text" name="email" maxlength="100" class="form-control">
-
-			<br/>
-
-			<label>ユーザ名：<span class="text-danger">※</span></label>
-			<input type="text" name="username" maxlength="20" class="form-control">
-
-			<br/>
-
-			<label>パスワード：<span class="text-danger">※</span></label>
-			<input type="password" name="password" maxlength="20" class="form-control">
-
-			<br/>
-
-			<label>パスワード(確認)：<span class="text-danger">※</span></label>
-			<input type="password" name="password-confirm" maxlength="20" class="form-control">
-
-			<br/>
-
-			<label>電話番号：<span class="text-danger">※</span></label>
-			<input type="text" name="phone" maxlength="14" class="form-control">
-
-			<br/>
-
-			<label>郵便番号：<span class="text-danger">※</span></label>
-			<input type="text" name="zipcode" maxlength="7" class="form-control">
-
-			<div class="text-center">
-				<input type="submit" name="getAddress" value="　住所自動入力　" class="btn btn-primary"
-				formaction="/useradd/zipcode">
-			</div>
-
-			<!-- 郵便番号自動入力 Sample -->
-			<div th:if="${zipcodeList}">
-				<div th:each="item : ${zipcodeList}" th:object="${item}">
-					<label>都道府県：<span class="text-danger">※</span></label>
-					<input type="text" name="prefectures" maxlength="4" class="form-control" th:value="*{address1}">
-					<br/>
-					<label>市区町村：<span class="text-danger">※</span></label>
-					<input type="text" name="city" maxlength="10" class="form-control" th:value="*{address2}">
-					<br/>
-					<label>地域名：<span class="text-danger">※</span></label>
-					<input type="text" name="region" maxlength="10" class="form-control" th:value="*{address3}">
-				</div>
-			</div>
-			<div th:unless="${zipcodeList}">
-				<label>都道府県：<span class="text-danger">※</span></label>
-				<input type="text" name="prefectures" maxlength="4" class="form-control">
-				<br/>
-				<label>市区町村：<span class="text-danger">※</span></label>
-				<input type="text" name="city" maxlength="10" class="form-control">
-				<br/>
-				<label>地域名：<span class="text-danger">※</span></label>
-				<input type="text" name="region" maxlength="10" class="form-control">
-			</div>
-			<label>番地：<span class="text-danger">※</span></label>
-			<input type="text" name="address1" maxlength="20" class="form-control">
-
-			<br/>
-
-			<label>建物名・部屋番号：</label>
-			<input type="text" name="address2" maxlength="30" class="form-control">
-
-			<br/>
-
-			<div class="form-check">
-				<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="magazin">
-				<label class="form-check-label">
-					メールマガジンを受け取る
-				</label>
-			</div>
+<!-- 性別 -->
+<!--
+<div>
+	<label>性別：<span class="text-danger">※</span></label>
+	<br/>
+	<label>男性</label>
+	<input type="radio" name="gender" id="male" class="form-control">
+	<label>女性</label>
+	<input type="radio" name="gender" id="female" class="form-control">
+	<label>未選択</label>
+	<input type="radio" name="gender"  id="unselect" class="form-control" checked>
+</div>
+-->
 
 
-			<br/>
+<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+  <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+  <label class="btn btn-outline-primary" for="btnradio1">男性</label>
 
-			<div id="wrapContents">
+  <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+  <label class="btn btn-outline-primary" for="btnradio2">女性</label>
+
+  <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+  <label class="btn btn-outline-primary" for="btnradio3">未選択</label>
+</div>
+
+<br/>
+
+<!--  生年月日 -->
+<div>
+  <label>生年月日：<span class="text-danger">※</span></label>
+  <label>年</label>
+  <input type="text" name="year" maxlength="4" class="form-control">
+  <label>月</label>
+  <input type="text" name="month" maxlength="2" class="form-control">
+  <label>日</label>
+  <input type="text" name="day" maxlength="2" class="form-control">
+</div>
+
+<br/>
+
+<label>メールアドレス：<span class="text-danger">※</span></label>
+<input type="text" name="email" maxlength="100" class="form-control">
+
+<br/>
+
+<label>ユーザ名：<span class="text-danger">※</span></label>
+<input type="text" name="username" maxlength="20" class="form-control">
+
+<br/>
+
+<label>パスワード：<span class="text-danger">※</span></label>
+<input type="password" name="password" maxlength="20" class="form-control">
+
+<br/>
+
+<label>パスワード(確認)：<span class="text-danger">※</span></label>
+<input type="password" name="password-confirm" maxlength="20" class="form-control">
+
+<br/>
+
+<label>電話番号：<span class="text-danger">※</span></label>
+<input type="text" name="phone" maxlength="14" class="form-control">
+
+<br/>
+
+<label>郵便番号：<span class="text-danger">※</span></label>
+<input type="text" name="zipcode" maxlength="7" class="form-control">
+
+<br/>
+
+<div class="text-center">
+  <input type="submit" name="getAddress" value="　住所自動入力　" class="btn btn-primary"
+  formaction="/useradd/zipcode">
+</div>
+
+<!-- 郵便番号自動入力 Sample -->
+<div th:if="${zipcodeList}">
+  <div th:each="item : ${zipcodeList}" th:object="${item}">
+    <label>都道府県：<span class="text-danger">※</span></label>
+    <input type="text" name="prefectures" maxlength="4" class="form-control" th:value="*{address1}">
+    <br/>
+    <label>市区町村：<span class="text-danger">※</span></label>
+    <input type="text" name="city" maxlength="10" class="form-control" th:value="*{address2}">
+    <br/>
+    <label>地域名：<span class="text-danger">※</span></label>
+    <input type="text" name="region" maxlength="10" class="form-control" th:value="*{address3}">
+  </div>
+</div>
+<div th:unless="${zipcodeList}">
+  <label>都道府県：<span class="text-danger">※</span></label>
+  <input type="text" name="prefectures" maxlength="4" class="form-control">
+
+  <br/>
+
+  <label>市区町村：<span class="text-danger">※</span></label>
+  <input type="text" name="city" maxlength="10" class="form-control">
+  <br/>
+  <label>地域名：<span class="text-danger">※</span></label>
+  <input type="text" name="region" maxlength="10" class="form-control">
+</div>
+<label>番地：<span class="text-danger">※</span></label>
+<input type="text" name="address1" maxlength="20" class="form-control">
+
+<br/>
+
+<label>建物名・部屋番号：</label>
+<input type="text" name="address2" maxlength="30" class="form-control">
+
+<br/>
+
+<div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="magazin">
+  <label class="form-check-label">メールマガジンを受け取る</label>
+</div>
+
+<br/>
+
+<div id="wrapContents">
 <h1>利用規約</h1>
 <p>この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
 
@@ -293,20 +294,18 @@ h1 {
 <div id="end"></div>
 </div>
 
-		<div class="form-check">
-			<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="agreeTeam">
-			<label class="form-check-label" for="flexCheckDefault">
-				利用規約
-			</label>
-		</div>
+<div class="form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="agreeTeam">
+  <label class="form-check-label" for="flexCheckDefault">利用規約</label>
+</div>
 
-	    <br/>
+<br/>
 
-	    <div class="text-center">
-			<input type="submit" value="　登録　" class="btn btn-primary" formaction="/useradd/userlist">
-		</div>
+<div class="text-center">
+  <input type="submit" value="　登録　" class="btn btn-primary" formaction="/useradd/userlist">
+</div>
 
-	</form>
+</form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
